# OCAMLendar

./: OCAMLendar.opam  README.md  dune-project
func_tests/: all_features.mycal
lib/: calendar.ml  calendar.mli  command.ml  command.mli  dune  employee.ml  employee.mli  meeting.ml  meeting.mli  utils.ml
test/: dune  myCalendar.ml
